Let me write a commit message for fixing the duplicate aggregation issue and ensuring immutability:
```
Fix multiple aggregations handling and ensure GroupByKey immutability
```

This message covers both key changes being made:
1. Switching from Map to List for handling multiple aggregations on same column
2. Using List.copyOf for GroupByKey values to ensure proper immutability

The message is concise while capturing the important changes being made in response to the PR feedback.